--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <title>This is my website</title>
-<p>welcome. i hope you enjoy my website</p>
+<p>Hi. i hope you enjoy my website</p>
 <p>:) x) xd
 </p>
 </html>
